Lowered language level to java 8